# plugin-registry-rs

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: Cargo.toml
examples/actor-test/: main.rs  test.tera
examples/my-plugin/: server.rs
examples/plugin-client/: client.rs
plugin-registry/: Cargo.toml  build.rs
plugin-registry/proto/plugin/: plugin.proto
plugin-registry/src/: lib.rs  registry.rs
proto/plugin/: health.proto
src/: client.rs  server.rs
